--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ var browserSync = require('browser-sync').create();
 // Server
 gulp.task('browser-sync', function () {
     browserSync.init({
-        proxy: "siilak.dev"
+        proxy: ""
     });
 });
 
